[gd_scene load_steps=5 format=3 uid="uid://dg35yjd8p78lj"]

[ext_resource type="Texture2D" uid="uid://bx5c7x4o03g7k" path="res://Sprites/icon.svg" id="1_51owf"]
[ext_resource type="Script" path="res://Scripts/merchandise_unit.gd" id="1_kex4u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8r76"]
bg_color = Color(0, 0, 0, 0)
border_width_top = 5
border_width_bottom = 5
border_color = Color(0.14, 0.14, 0.14, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odmey"]
bg_color = Color(0, 0, 0, 0)
border_width_bottom = 2
border_color = Color(0.95173, 0.784421, 0, 1)

[node name="MerchandiseUnit" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
theme_override_constants/margin_top = 15
script = ExtResource("1_kex4u")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w8r76")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_51owf")
expand_mode = 5
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name: "

[node name="NameLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_odmey")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Stat Requirements"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Str: "

[node name="StrengthLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Dex: "

[node name="DexterityLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Int: "

[node name="IntelligenceLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
